Mobile menu & Webfont fix (#438)
_Why_?
* I broke the mobile menu fix in one of my PRs
* The webfont Playfair Bold Italic was deleted at some point.
* font color was too light on inline links

_How_?

* Deleted the menu animation for mobile.
* Put Playfair Bold Italic back in
* Small style adjusmtent to inline link

_Side Effects_?
None

--- a/universal/components/ExternalLink/styles.css
+++ b/universal/components/ExternalLink/styles.css
@@ -185,7 +185,7 @@
 
 .inline {
   composes: link;
-  color: ThriveTeal;
+  color: #00859B;
   border: none;
   display: inline;
   padding: 0;
@@ -193,10 +193,10 @@
   font-size: inherit;
   text-align: inherit;
   text-transform: none;
-  transition: all 200ms cubic-bezier(.33,.89,.34,.98);
+  transition: all 100ms cubic-bezier(.33,.89,.34,.98);
 
   &:hover {
     text-decoration: underline;
-    color: #00859B;
+    color: #00A9C5;
   }
 }
